home page modifed and responsiveness added

--- a/templates/home.html
+++ b/templates/home.html
@@ -8298,6 +8298,40 @@ textarea.form-control {
   font-size: 16px;
   font-weight: 500; }
 
+
+  #n23{
+      margin-left: 57%;
+    }
+
+    #reste{
+      margin-left: 22%;
+    }
+
+    #subti{
+      margin-left: 25%;
+    }
+
+
+  
+
+
+  
+  @media screen and (max-width: 900px) { 
+    
+    #n23{
+      margin-left: 35%;
+    }
+
+    #reste{
+      margin-left: 6%;
+    }
+
+    #subti{
+      margin-left: 6%;
+    }
+  }
+  
+
 	</style>
 
 </head>
@@ -8459,8 +8493,8 @@ textarea.form-control {
 				<br>
 				<a href="#card1"
 					style="margin-left: 22%; color: white; background-color: blue; padding: 1%; border-radius: 3px;">Previous</a>
-				<a href="#card3"
-					style="margin-left: 57%; color: white; background-color: blue; padding: 1%; border-radius: 3px;">Next</a>
+				<a href="#card3" id="n23"
+					style=" color: white; background-color: blue; padding: 1%; border-radius: 3px; ">Next</a>
 
 
 
@@ -8545,8 +8579,8 @@ textarea.form-control {
 		<br>
 
 		    <a href="#card2" style="margin-left: 22%; color: white; background-color: blue; padding: 1%; border-radius: 3px;">Previous</a>
-		    <input type="reset" style="margin-left: 22%; color: white; background-color: rgb(236, 151, 39); padding: 1%; border-radius: 3px;">
-		    <input type="submit" style="margin-left: 25%; color: black; background-color: rgb(56, 240, 102); padding: 1%; border-radius: 3px;">
+		    <input type="reset" id="reste" style=" color: white; background-color: rgb(236, 151, 39); padding: 1%; border-radius: 3px;  ">
+		    <input type="submit" id="subti" style=" color: black; background-color: rgb(56, 240, 102); padding: 1%; border-radius: 3px; ">
 
 
 
