--- a/templates/result.html
+++ b/templates/result.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
     
-    <h1>  PREDICTION :  </h1>
+</head>
+<body style="background-color: rgb(153, 224, 233);">
+    
+    <h1>  Prediction Results:  </h1>
 
     <br>
    <h1>{{name}}, your result is {{data}}</h1>
 
 {%if data == 0%}
-<h1>Your chances of getting heart attck is verylow</h1>  
+<h1>Your chances of getting heart attck is very low</h1>  
 
 
 {%else%}
