Fixed errors in form and input values

--- a/templates/home.html
+++ b/templates/home.html
@@ -8556,11 +8556,11 @@ textarea.form-control {
 
 											<div class="col-md-12">
 												<div class="form-group">
-													<label class="label" for="subject"><b>Resting Blood
-															Pressure</b></label><br>
-													<input type="radio" required name="thal" value="0"> Normal<br>
-													<input type="radio" name="thal" value="1"> Fixed defect<br>
-													<input type="radio" name="thal" value="2"> reversible
+													<label class="label" for="subject"><b>Thalassemia
+															Type:</b></label><br>
+													<input type="radio" required name="thal" value="1"> Normal<br>
+													<input type="radio" name="thal" value="2"> Fixed defect<br>
+													<input type="radio" name="thal" value="3"> reversible
 													defect<br>
 												</div>
 											</div>
