--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -81,6 +81,11 @@ main .p1{
 .p1 button:hover{
   color: black;
 }
+
+
+
+
+
     </style>
 </head>
 <body>
@@ -90,16 +95,16 @@ main .p1{
                 <img src="/static/LOGO1.png">
             </div>
             <nav>
-                <a href="@">HOME</a>
-                <a href="@">ABOUT</a>
-                <a href="@">DESCRIPTION</a>
+                
+                <a href="/templates/about.html">ABOUT US</a>
+                <a href="/templates/descrip.html">DESCRIPTION</a>
             </nav>
         </div>
         <main>
         <section class="p1">
             <h2>PREDICT YOUR </h2>
-            <h1>HEART DISEASE</h1>
-            <p></p>
+            <h1>Chances of getting Heart attack</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem, repellat nihil, quas dignissimos iure autem eaque sapiente in ex ad reiciendis. Dolores minima possimus animi. Quam nemo facere quasi delectus omnis? Saepe possimus officia modi placeat labore nihil asperiores repellendus.</p>
 
            <a href="/templates/home.html"><button>click here to continue</button></a>
         </section>
