--- a/templates/descrip.html
+++ b/templates/descrip.html
@@ -1,8 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About us</title>
-    <link rel="stylesheet" href="dis.css">
+    <title>Description</title>
+    <style>
+        body{
+    margin:0;
+    padding: 0;
+    font-weight: Century Gothic;
+    background: url(https://designshack.net/wp-content/uploads/background-design-trends.jpg);
+    background-size: cover;
+    background-position: center;
+}
+.e1{
+    height: 75vh;
+    width: 30%;
+    background:rgba(0,0,0,0.6);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    padding:0 20px;
+}
+.img{
+    height: 70px;
+    width: 70px;
+    background:url(https://www.logomyway.com/logos_new/25398/LevelUp_660294718776.png)no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius: 50px;
+    position: absolute;
+    top: 0%;
+    left: 40%;
+    transform: translate(-10% ,-50%);
+}
+.e1 h1{
+    color: white;
+    margin-top: 80px;
+    margin-left: 110px;
+
+}
+.e1 p{
+    color: white;
+    margin-top: 30px;
+    font-size: large;
+}
+    </style>
 </head>
 <body>
     <div class="e1">
