--- a/templates/result.html
+++ b/templates/result.html
@@ -19,7 +19,7 @@
             left: 5%;
             
             background-color: rgba(0, 0, 0,0.5);
-            color: white;
+            color: rgb(245, 196, 91);
             padding-left: 5%;
             padding-right: 5%;
             border-radius: 5px;
@@ -76,6 +76,7 @@
             <br>
             <a id="link" href='/'>go back to home page</a>
         </div>
+        
     </div>
 </body>
 
