--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>HOME page</title>
+    <title>HOME</title>
     <style>
         *{
     margin: 0;
@@ -103,11 +103,11 @@ main .p1{
         <main>
         <section class="p1">
             <h2>PREDICT YOUR </h2>
-            <h1>Chances of getting Heart attack</h1>
+            <h1>Chances of getting Heart Attack</h1>
             <p style="font-size: large;">We are observing a recent trend of increase in heart attack fatalities with every passing generation. With the consultation of medical experts, we have figured out, that with the increasing workload, stress, and unhealthy lifestyle, there has been an increase in the upwardness of the curve of heart attack victims. Due to the lack of awareness of the general masses, this trend is not going to reduce in the coming future. We, as a group of four, did a brainstorming session to figure out what we can do, and have tried our best to come to the solution. We have designed a model which will take few basic inputs from the user, and based on statistical and scientific data, our model shall predict the possibility of a heart attack. We should however like to stress, that patients and users should not treat this as a diagnosis of illness, and if there is some serious discomfort then, they should immediately visit the doctor.</p>
             <p>Please read description to know more about the medical information we are asking to predict!</p>
 
-           <a href="/templates/home.html"><button>click here to continue</button></a>
+           <a href="/templates/home.html"><button>Click here to Continue</button></a>
         </section>
         <section class="p2">
            <figure>
