--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About us</title>
+    <title>About Us</title>
    
     <style>
         body{
@@ -62,10 +62,10 @@
                  future. We, as a group of four, did a brainstorming session to figure out what we can do, and 
                  have tried our best to come to the solution.<br><br>
                  <strong><u>Cotributions</u>:</strong><br>
-                 Aniruddha Jana (ML MODEL)<br>
-                 Sai Prashanth Akuthota (BACK END & FRONT END)<br>
-                 Bhonsle siva Sathvik (FRONT END)<br>
-                 Debjit Sarkar (DOCUMENTATION)
+                 Aniruddha Jana (MACHINE LEARNING ENTHUSIAST)<br>
+                 Sai Prashanth Akuthota (FULL STACK DEVELOPER)<br>
+                 Bhonsle siva Sathvik (FRONT END DEVELOPER)<br>
+                 Debjit Sarkar (CONTENT WRITER)
                  
             </p>
             
