--- a/templates/descrip.html
+++ b/templates/descrip.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Description</title>
+    <title>DESCRIPTION</title>
     <style>
         body{
     margin:0;
     padding: 0;
     font-weight: Century Gothic;
-    background: url(https://designshack.net/wp-content/uploads/background-design-trends.jpg);
+    background: url(https://designshack.net/wp-content/uploads/background-design-trends.jpg) ;
     background-size: cover;
     background-position: center;
 }
 .e1{
-    height: 75vh;
-    width: 30%;
+    height: 110vh;
+    width: 40%;
     background:rgba(0,0,0,0.6);
     position: absolute;
-    top: 50%;
+    top: 80%;
     left: 50%;
     transform: translate(-50%,-50%);
-    padding:0 20px;
+    padding:0 50px;
 }
 .img{
     height: 70px;
@@ -36,7 +36,7 @@
 .e1 h1{
     color: white;
     margin-top: 80px;
-    margin-left: 110px;
+    margin-left: 150px;
 
 }
 .e1 p{
@@ -44,7 +44,7 @@
     margin-top: 30px;
     font-size: large;
 }
-    </style>
+    </style>>
 </head>
 <body>
     <div class="e1">
@@ -54,22 +54,33 @@
 
             </div>
             <p>
-                <strong><u>RESTING BLOOD PRESSURE</u>:</strong>
+                <strong style="color: rgb(247, 67, 67);"><u>RESTING BLOOD PRESSURE</u>:</strong>
                 Normal: Blood pressure below 120/80 mm Hg is considered to be normal. Elevated: When blood pressure
                 readings consistently range from 120 to 129 systolic and less than 80 mm Hg diastolic, it is known 
                 as elevated blood pressure.<br>
-                <strong><u>SERUM CHOLESTORAL IN MG/DL</u>:</strong>
+                <strong style="color: rgb(247, 67, 67);"><u>SERUM CHOLESTORAL IN MG/DL</u>:</strong>
                 A person's serum cholesterol level represents the amount of total cholesterol in their blood.<br>
-                <strong><u>FASTING BLOOD SUGAR</u>:</strong>
-                A test to determine how much glucose (sugar) is in a blood sample after an overnight fast.<br>
-               <strong><u>RESTING ELECTROCARDIAG VALUES</u>:</strong> 
-                records the electrical activity of your heart at rest. It provides information about your heart rate
+                 <strong style="color: rgb(247, 67, 67);"><u>FASTING BLOOD SUGAR</u>:</strong>
+                 A test to determine how much glucose (sugar) is in a blood sample after an overnight fast.<br>
+                 <strong style="color: rgb(247, 67, 67);"><u>RESTING ELECTROCARDIAG VALUES</u>:</strong> 
+                 records the electrical activity of your heart at rest. It provides information about your heart rate
                  and rhythm.<br>
-                 <strong><u>ANGINA</u></strong> 
+                 <strong style="color: rgb(247, 67, 67);"><u>ANGINA</u></strong> 
                  a condition marked by severe pain in the chest, often also spreading to the shoulders, arms, and neck, owing 
                  to an inadequate blood supply to the heart.<br>
-                 <strong><u>FLOUROSOPY</u></strong> 
-                 Fluoroscopy is a type of medical imaging that shows a continuous X-ray image on a monitor, much like an X-ray movie.
+                 <strong style="color: rgb(247, 67, 67);"><u>FLOUROSOPY</u></strong> 
+                 Fluoroscopy is a type of medical imaging that shows a continuous X-ray image on a monitor, much like an X-ray movie.<br><br>
+
+                 <strong style="color: rgb(247, 67, 67);"><u>Exercise induced ST segment depression</u></strong>  is considered a reliable ECG finding for the diagnosis of obstructive coronary 
+                 atherosclerosis.  It has also been associated with a worse prognosis for patients with a documented coronary artery disease
+                 (CAD).  However, while the diagnostic and prognostic value of ST segment depression occurring during the active phase of 
+                 exercise test is well recognised, only a few studies have investigated the clinical significance of ST segment depression 
+                 appearing only during the recovery phase of exercise testing.<br><br>
+                 The point of inflection at the junction of the S wave and ST segment becomes depressed during exercise, with maximum depression 
+                 at peak exercise. The normal ST segment during exercise therefore slopes sharply upwards.<br><br>
+                 Thalassemia is an inherited blood disorder characterised by less oxygen-carrying protein (haemoglobin) and fewer red blood cells
+                 in the body than normal.Symptoms include fatigue, weakness, paleness and slow growth.Mild forms may not need treatment. Severe forms 
+                 may require blood transfusions or a donor stem-cell transplant.<br><br><br><br><br><br><br><br><br>
 
                  
                  
