--- a/templates/result.html
+++ b/templates/result.html
@@ -68,7 +68,7 @@
 
 
             {%else%}
-            <h1>Your chances of getting heart attack is HIGH!!!h</h1>
+            <h1>Your chances of getting heart attack is HIGH!!!</h1>
 
 
             {%endif%}
